Add DTOs for API responses